# pyzmp

./: .gitignore  .travis.yml  CHANGELOG.rst  CMakeLists.txt  README.rst  dev-requirements.txt  doc-requirements.txt  package.xml  pypi_release.sh  requirements.txt  setup.py  tox.ini
doc/: conf.py  make.bat  pyzmp.rst  pyzmp.tests.rst  tutorial.rst
docs/: Makefile  index.rst  tutorial.rst
pyzmp/: __init__.py  __main__.py  _version.py  coprocess.py  helpers.py  message.py  node.py  process.py  process_async.py  process_observer.py  registry.py  service.py  task.py
pyzmp/crdt/: __init__.py
pyzmp/crdt/core/: atom.py
pyzmp/itc/: __init__.py  event.py  id.py
pyzmp/itc/tests/: test_event.py  test_id.py
pyzmp/monads/: __init__.py  applicative.py  container.py  continuation.py  either.py  functor.py  maybe.py  monad.py  monoid.py  reader.py  state.py  statechanger.py  writer.py
pyzmp/monads/tests/: monad_tester.py  monoid_tester.py  test_either.py  (+7 more)
pyzmp/proto/: message.py
pyzmp/registry/: __init__.py  _codec.py  _entry.py  _fswatcher.py  _local_registry.py  dbm_yaml.py  shared.py  yamldict.py
pyzmp/service/: __init__.py  service.py
pyzmp/syncio/: __init__.py  events.py  task.py
pyzmp/tests/: test_coprocess.py  test_message.py  test_node.py  test_process.py  test_process_observer.py  test_registry.py  test_service.py
requirements/: dev.txt  tests.txt
requirements/ROS/: indigo.txt  kinetic.txt
subproc/: echo_server.py  protocol.py  subprocess.py  subprocess_protocol.py  subprocess_protocol_implement.py  subprocess_transport.py  zmqserver.py
subproc/tests/: minimal_long_process.py  minimal_short_process.py  test_minimal_long_process.py  test_subprocess.py  test_subprocess_protocol.py
(+27 files in other folders)
