<?xml version="1.0"?>
<package format="2">
  <!--
   This file is mostly here to provide ros dependencies when this project is built with catkin
   -->
  <name>pyzmp</name>
  <version>0.0.12</version>
  <description>
  Python Multiprocess Management Framework, based on ZeroMQ communication
  </description>

  <license>BSD</license>

  <url type="repository">https://github.com/asmodehn/pyzmp</url>
  <url type="bugtracker">https://github.com/asmodehn/pyzmp/issues</url>

  <author email="asmodehn@gmail.com">AlexV</author>
  <maintainer email="asmodehn@gmail.com">AlexV</maintainer>

  <buildtool_depend version_gte="0.6.18">catkin</buildtool_depend>
  <build_depend version_gte="0.1.9">catkin_pip</build_depend>

  <depend>python-zmq</depend>

  <test_depend>python-pytest</test_depend>

  <export>
    <rosdoc config="rosdoc.yaml" />
  </export>

</package>


